syntax = "proto3";
package proto;
option go_package = ".;proto";

import "google/protobuf/timestamp.proto";
// import "google/protobuf/empty.proto";

message AccidentData {
  string username = 1;
  string car_id = 2;
  google.protobuf.Timestamp time = 3;
  double latitude = 4;
  double longitude = 5;
}

message CreateAccidentDataResponse { string accident_id = 1; }

service AccidentService {
  rpc CreateAccidentData(AccidentData) returns (CreateAccidentDataResponse) {}
}